--- a/popup.html
+++ b/popup.html
@@ -10,7 +10,7 @@
     </style> 
   </head>
   <body>
-    <button type="button" id="showAdmin">Show</button>
+    <button type="button" id="showAdmin"></button>
     <script src="popup.js"></script>
   </body>
 </html>
